# OSGP

./: README.md
ui/: README.md  angular.json  package.json  pnpm-lock.yaml
ui/src/: index.html
ui/src/app/: api-host.ts  app-icons.ts  app-routing.module.ts  app.component.html  app.component.ts  app.init.ts  app.module.ts
ui/src/app/components/logon-history-list/: logon-history-list.component.html  logon-history-list.component.less  (+1 more)
ui/src/app/services/: auth.service.ts
ui/src/app/types/: logon-history.ts  response.ts  user.ts
ui/src/app/util/: login-guard.ts
web/: .gitignore  Cargo.toml  example.env
web/migrations/2023-04-07-125731_create_users_table/: up.sql
web/migrations/2023-04-08-211236_create_logon_sessions_table/: down.sql  up.sql
web/migrations/2023-04-10-155559_add_logon_sessions_expires_at_column/: down.sql  up.sql
web/migrations/2023-04-10-204619_create_logon_history/: down.sql  up.sql
web/migrations/2023-04-10-210422_add_logon_sessions_address_column/: down.sql  up.sql
web/migrations/2023-04-10-211000_add_logon_sessions_started_at_column/: down.sql  up.sql
web/migrations/2023-04-11-192817_rename_logon_history_user_column/: down.sql  up.sql
web/migrations/2023-04-11-193104_rename_logon_sessions_user_column/: down.sql  up.sql
web/migrations/2023-04-11-195920_create_docker_hosts_table/: down.sql  up.sql
web/src/: database.rs  handlers.rs  main.rs  models.rs  respond.rs  schema.rs  security.rs
web/src/handlers/: logon_handler.rs  user_handler.rs
web/src/models/: docker_host.rs  logon_history.rs  logon_session.rs  user.rs
(+10 files in other folders)
