[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.0.3", features = ["postgres", "chrono", "uuid"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
rocket_cors = { version = "0.6.0-alpha2", default-features = false }
serde_json = "1.0.95"
jsonwebtoken = "8.3.0"
dotenvy = "0.15.0"
argon2 = "0.5.0"
